<resources>
    <string name="app_name">Calculator</string>
    <string name="textview">TextView</string>
    <string name="calculator_symbol_divided">/</string>
    <string name="calculator_symbol_multiply">x</string>
    <string name="calculator_symbol_subtraction">-</string>
    <string name="calculator_symbol_addition">+</string>
    <string name="calculator_symbol_point">.</string>


    <string name="calculator_operate_del">DEL</string>
    <string name="calculator_operate_ac">AC</string>
    <string name="calculator_operate_calculator">=</string>

    <string name="calculator_num_0">0</string>
    <string name="calculator_num_1">1</string>
    <string name="calculator_num_2">2</string>
    <string name="calculator_num_3">3</string>
    <string name="calculator_num_4">4</string>
    <string name="calculator_num_5">5</string>
    <string name="calculator_num_6">6</string>
    <string name="calculator_num_7">7</string>
    <string name="calculator_num_8">8</string>
    <string name="calculator_num_9">9</string>
</resources>
